启用地球视角
启用地球视角

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <h3>视角控制</h3>
             <div class="control-group">
-                <button id="earth-view-toggle" class="view-button" style="display: none;">切换到地球视角</button>
+                <button id="earth-view-toggle" class="view-button" >切换到地球视角</button>
                 <button id="reset-view" class="view-button">重置视角</button>
                 <button id="pip-toggle" class="view-button active">隐藏全局视图</button>
             </div>
